# golden-aura-showroom

./: .gitignore  README.md  deploy_frontend.md  index.html  package-lock.json  package.json  tailwind.config.ts  todo.md  vite.config.ts
backend/: .gitignore  README.md  deploy_backend.md  manage.py  pyproject.toml
backend/accounts/: admin.py  models.py  serializers.py  tests.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/analytics/: admin.py  models.py  serializers.py  tests.py  views.py
backend/analytics/migrations/: 0001_initial.py  0002_alter_event_event_type.py
backend/cart/: admin.py  models.py  serializers.py  tests.py  views.py
backend/cart/migrations/: 0001_initial.py
backend/catalog/: admin.py  models.py  serializers.py  tests.py  views.py
backend/catalog/migrations/: 0001_initial.py  0002_tags.py  0003_productmedia_file.py  0004_category_and_product_category.py  0005_favorite.py
backend/golden_aura/: asgi.py  settings.py  urls.py  wsgi.py
backend/orders/: admin.py  models.py  serializers.py  tests.py  views.py
backend/orders/migrations/: 0001_initial.py
backend/payments/: admin.py  models.py  tests.py  views.py
backend/payments/migrations/: 0001_initial.py
backend/promotions/: admin.py  models.py  serializers.py  tests.py  views.py
backend/promotions/migrations/: 0001_initial.py
backend/recommendations/: admin.py  models.py  scoring.py  serializers.py  tests.py  views.py
backend/recommendations/migrations/: 0001_initial.py  0002_userfeature_needs_rebuild.py  0003_recommendation_session_scope.py
(+77 files in other folders)
